syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainapipb";

service Calculator {
    rpc Add(AddRequest) returns (AddRequest);  //Unary RPC
    rpc GenerateFibbonacci(FibonacciRequest) returns (stream FibonacciResponse );  //Server side stream
}


message AddRequest {
    int32 a =1;
    int32 b=2;
}
message  AddResponse {
    int32 sum =1;
    
}

message FibonacciRequest {
    int32 n = 1;   //Number of fibonacci  number to generate
}

message  FibonacciResponse {
    int32 number = 1;  //Individual Fibonnacci  number
}